[gd_scene load_steps=7 format=3 uid="uid://ckp5aaa5o8pr5"]

[ext_resource type="Script" path="res://scripts/reset_area.gd" id="1_x7kh7"]
[ext_resource type="PackedScene" uid="uid://b8gj84b46wvco" path="res://scenes/mainMenu.tscn" id="2_64mhw"]
[ext_resource type="Script" path="res://scenes/game_manager.gd" id="2_j34bk"]
[ext_resource type="PackedScene" uid="uid://i61ietw70s08" path="res://scenes/card_manager.tscn" id="5_jf42t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_edwtl"]
size = Vector2(1500, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qu6x"]
size = Vector2(20, 2000)

[node name="Game" type="Node2D"]
script = ExtResource("2_j34bk")

[node name="CurrentLevel" type="Node2D" parent="."]

[node name="mainMenu" parent="CurrentLevel" instance=ExtResource("2_64mhw")]

[node name="CardManager" parent="." instance=ExtResource("5_jf42t")]
visible = false
offset_left = -575.0
offset_top = -323.0
offset_right = -575.0
offset_bottom = -323.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MultyplayerHud" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -524.0
offset_top = -323.0
offset_right = -423.0
offset_bottom = -252.0
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="MultyplayerHud"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MultyplayerHud/Panel"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 66.0

[node name="Host" type="Button" parent="MultyplayerHud/Panel/VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="Join" type="Button" parent="MultyplayerHud/Panel/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/multiplayer_player.tscn")
spawn_path = NodePath("../Players")
spawn_limit = 4

[node name="Bullets" type="Node2D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="Bullets"]
_spawnable_scenes = PackedStringArray("res://scenes/bullet.tscn")
spawn_path = NodePath("..")

[node name="Players" type="Node2D" parent="."]

[node name="resetArea" type="Area2D" parent="."]
script = ExtResource("1_x7kh7")

[node name="bottom" type="CollisionShape2D" parent="resetArea"]
position = Vector2(8, 390)
shape = SubResource("RectangleShape2D_edwtl")

[node name="top" type="CollisionShape2D" parent="resetArea"]
position = Vector2(10, -1591)
shape = SubResource("RectangleShape2D_edwtl")

[node name="left" type="CollisionShape2D" parent="resetArea"]
position = Vector2(-734, -602)
shape = SubResource("RectangleShape2D_0qu6x")

[node name="right" type="CollisionShape2D" parent="resetArea"]
position = Vector2(745, -603)
shape = SubResource("RectangleShape2D_0qu6x")

[connection signal="pressed" from="MultyplayerHud/Panel/VBoxContainer/Host" to="." method="become_host"]
[connection signal="pressed" from="MultyplayerHud/Panel/VBoxContainer/Join" to="." method="join_game"]
[connection signal="body_entered" from="resetArea" to="resetArea" method="_on_body_entered"]
